--- a/app/views/gifts/bags.html.erb
+++ b/app/views/gifts/bags.html.erb
@@ -1,3 +1,6 @@
+<script>
+document.getElementById("gifts").setAttribute("class", "active");
+</script>
 <h1>Bags gift: <%= @gift.name %></h1>
 
 <% form_for(@gift) do |f| %>
