--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#faq</h1>
-<p>Find me in app/views/pages/faq.html.erb</p>
+<script>
+document.getElementById("faq").setAttribute("class", "active");
+</script>
+<h1>Frequently Asked Quinces</h1>
+<p>
+  Here are a bunch of questions that we imagine people want to ask us all the time (and some answers too)!
+</p>
+
