--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<script>
+document.getElementById("home").setAttribute("class", "active");
+</script>
+<h1>We're getting married...</h1>
+<p align="center">
+<img src="images/back-invite.png" />
+</p>
+<p align="center">
+<img src="images/front-invite.png" />
+</p>
+<!-- <div id="sidebar">
+    Other stuff.
+</div>
+<%= link_to "Press me!", '#', :class => "signup_button round" %> -->
