--- a/app/views/pages/venue.html.erb
+++ b/app/views/pages/venue.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#venue</h1>
-<p>Find me in app/views/pages/venue.html.erb</p>
+<script>
+document.getElementById("venue").setAttribute("class", "active");
+</script>
+
+<h1>Where?</h1>
+
+<p>
+
+<table><tr><td>
+<small>View <a href="http://maps.google.com.au/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=101084178117138232077.00048cc09e5386be99721&amp;ll=-33.853791,151.172862&amp;spn=0.006237,0.00912&amp;z=16&amp;source=embed" style="color:#0000FF;text-align:left">this</a> in a larger map</small>
+<br />
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com.au/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=101084178117138232077.00048cc09e5386be99721&amp;ll=-33.853791,151.172862&amp;spn=0.006237,0.00912&amp;z=16&amp;output=embed"></iframe>
+</td>
+<td>
+Here's a map which has the location of the ceremony and reception marked on it. The purple marker shows where exactly in the park we're having the ceremony,
+the yellow marker is the reception location (Balmain Rowing Club), and the red line indicates where you might find parking.
+</td></tr></table>
+</p>
+
