--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,3 +1,6 @@
+<script>
+document.getElementById("gifts").setAttribute("class", "active");
+</script>
 <h1>Our Wishlist</h1>
 
 <% if flash[:notice] %>
