--- a/app/views/gifts/search_gifter.html.erb
+++ b/app/views/gifts/search_gifter.html.erb
@@ -1,3 +1,6 @@
+<script>
+document.getElementById("gifts").setAttribute("class", "active");
+</script>
 <h1>Gifts taken by codename <%= @codename %> x </h1>
 
 <% if flash[:notice] %>
