--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,16 @@
-<h1>Listing posts</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Title</th>
-    <th>Content</th>
-  </tr>
+<script>
+document.getElementById("posts").setAttribute("class", "active");
+</script>
+<h1>Recent updates</h1>
 
 <% for post in @posts %>
-  <tr>
-    <td><%=h post.name %></td>
-    <td><%=h post.title %></td>
-    <td><%=h post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-  </tr>
+  <h6><%=h post.title %></h6>
+  <p>
+    <%=h post.content %>
+    <br />
+    <%= link_to 'Comment', post %> | <%=h post.created_at%>
+    <br />
+    <hr>
+  </p>
 <% end %>
-</table>
 
